feat:增加duckdb SQL算子